Add support for scheduling functions using cron expressions
- Add new settings where the user can toggle the cron execution.
- The executions page show a label on what was the trigger of the function
